--- a/src/main/resources/static/goods_detail.htm
+++ b/src/main/resources/static/goods_detail.htm
@@ -64,7 +64,7 @@
         </tr>
         <tr>
             <td>秒杀价</td>
-            <td colspan="3"  id="miaoshaPrice"></td>
+            <td colspan="3"  id="msPrice"></td>
         </tr>
         <tr>
             <td>库存数量</td>
@@ -74,7 +74,6 @@
 </div>
 </body>
 <script>
-
 
     $(function(){
         getDetail();
